--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3'
 
 services:
+
   dockernode:
     build: .
     command: npm start
@@ -8,3 +9,25 @@ services:
       - "3000:3000"
     volumes:
       - .:/usr/src/app
+
+  
+  mysql:
+      container_name: Container_mysql
+      hostname: mysql
+      image: mysql
+      restart: always
+      command:
+        - --default-authentication-plugin=mysql_native_password
+        - --character-set-server=utf8mb4
+        - --collation-server=utf8mb4_unicode_ci
+        - --innodb_force_recovery=0
+      volumes: 
+        - C:\Users\Gabriel\Desktop\MySQL_API:/var/lib/mysql
+      ports:
+        - 3306:3306
+      environment:
+        MYSQL_ROOT_PASSWORD: gabriel123
+        MYSQL_DATABASE: API_REST
+        MYSQL_USER: gabriel
+        MYSQL_PASSWORD: gabriel123
+        TZ: America/Sao_Paulo
