--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
   "author": "Gabriel Marinho",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.1.2",
+    "sequelize": "^6.29.0"
   },
   "devDependencies": {
     "eslint": "^8.34.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
     "nodemon": "^2.0.20",
+    "sequelize-cli": "^6.6.0",
     "sucrase": "^3.29.0"
   }
 }
